# farpd

./: LICENSE  Makefile.am  Makefile.in  README.md  acconfig.h  aclocal.m4  arpd.8  arpd.c  config.h.in  configure  configure.in  daemon.c  mkinstalldirs
debian/: README.Debian  changelog  control  copyright  dirs  farpd.default  farpd.init  farpd.prerm  rules
